# BidNet

./: README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  main.tsx
client/src/Components/: AuctionDetail.tsx  AuctionList.tsx  CreateAuction.tsx  HomePage.tsx  Login.tsx  Navbar.tsx  NotFound.tsx  Profile.tsx  Register.tsx
client/src/modules/: CreateAuction.css  Profile.css
server/: .gitignore  CMakeLists.txt  db_connection.cpp  db_connection.h  details.txt  endpointdescription.txt  howtorun.txt  main.cpp
